[TBR-10627] login dropdown block no longer shifts when selected
Summary: [TBR-10627] header no longer flashes when login dropdown closes

Test Plan: Review

Reviewers: motiejus.labzentis

Reviewed By: motiejus.labzentis

Subscribers: motiejus.labzentis

Differential Revision: https://ph.tonybet.com/D16988

--- a/styles/bnl/stylesheets/scss/_custom.scss
+++ b/styles/bnl/stylesheets/scss/_custom.scss
@@ -17,7 +17,7 @@ body {
     @include media-breakpoint-down(lg) {
         padding: 0 20px;
     }
-    &.modal-open-desktop {
+    &.modal-open-windows {
       transform: translateX(-8px);
       padding-right: 80px !important;
       @media only screen and (max-width: 1920px) {
